apps/traefik/ingressroutes/jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.denise.home`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-tailscale
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.denise-home-k3s.tail7b6c16.ts.net`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
