apps/traefik/ingressroutes/navidrome.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: navidrome
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`navidrome.denise.home`)
      kind: Rule
      services:
        - name: navidrome
          port: 4533
