apps/traefik/ingressroutes/nextcloud.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nextcloud.denise.home`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
